--- a/css/resestilos.css
+++ b/css/resestilos.css
@@ -1,10 +1,8 @@
 .grilla {
     display: grid;
     place-items: center;
-
-
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 3fr 2fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .item1 {
@@ -13,42 +11,57 @@
 }
 
 .item2 {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    grid-row: 2 / 5;
 }
 
 .item3 {
-    grid-column: 3 / 4;
+    grid-column: 2 / 5;
     grid-row: 1 / 2;
    
 }
 
 .item4 {
-    grid-column: 1 / 2;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
 
 .item5 {
-    grid-column: 2 / 3;
+    grid-column: 3 / 4;
     grid-row: 2 / 3;
 }
 
 .item6 {
-    grid-column: 3 / 4;
+    grid-column: 4 / 5;
     grid-row: 2 / 3;
 }
 
 .item7 {
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
-}
-
-.item8 {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
 
-.item9 {
+.item8 {
     grid-column: 3 / 4;
     grid-row: 3 / 4;
+}
+
+.item9 {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+}
+
+.item10 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.item11 {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+}
+
+.item12 {
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
 }
