--- a/css/styles.css
+++ b/css/styles.css
@@ -272,81 +272,96 @@ video {
 
 /* SECCION RESEÑAS  Y GALERIA */
 
-.container {
-    border: 2px dotted green;
+.grid-container {
     display: grid;
-    grid-template-columns: 33% 1fr;
+    place-items: center;
+    grid-template-columns: 3fr 2fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
-.reviews {
-  border: 2px solid brown;
-    display: grid;
-    grid-template-columns: 1fr;
-
-  
- 
+.item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
 }
 
-.reviews .heading {
-  font-size: 1rem;
-}
- 
-.box {
-
-    border: 1px solid blueviolet;
-    margin: 2%;
+.item2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 5;
 }
 
-.container .reviews .box {
+.item3 {
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+   
+}
+
+.item4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.item5 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.item6 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+
+.item7 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.item8 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.item9 {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+}
+
+.item10 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.item11 {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+}
+
+.item12 {
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+}
+
+
+
+/* .grid-container .grid-reviews .box {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
 
-.container .reviews .box:hover{
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
-}
+.grid-container .grid-reviews .box:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}*/
 
 
-.gallery {
-  border: 1px dashed red;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 2%;
-
-    margin: 5%; 
-}     
-
-.card {
-    border: none;
-    
-    padding: 5px;
-    margin: 8% 4%;
-    
-}
-
-.reviewsandgallery .container .gallery .card h3 {
-  font-size: 1.2rem;
-  color:#333;
-  text-align: center;
-  
-  
-}
 
 
-.pic {
-    
-    margin: 3px 0;
-    max-height: fit-content;
+    /*
 
-    padding: 10px 0;
-}
-
-.reviewsandgallery .gallery .card {
+.reviewsandgallery .grid-container .grid-gallery .card {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
 
-.reviewsandgallery .gallery .card:hover{
+.reviewsandgallery .grid-container .grid-gallery .card:hover{
   box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
-}
+} */
 
 
 
