--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ video {
 .services .box-container{
   display: flex;
   flex-wrap: wrap;
-  gap:1.5rem;
+  gap: 2rem;
  }
 
 .services .box-container .box{
@@ -269,14 +269,22 @@ video {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 
-
 /* SECCION RESEÑAS  Y GALERIA */
+
+.reviewsandgallery{
+  margin-bottom: 5%;
+}
 
 .grid-container {
     display: grid;
-    place-items: center;
     grid-template-columns: 3fr 2fr 2fr 2fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    grid-column-gap: 2%;
+    grid-row-gap: 2%;
+    overflow: hidden;
+  
 }
 
 .item1 {
@@ -289,10 +297,22 @@ video {
     grid-row: 2 / 5;
 }
 
+.grid-container .item2 .stars i {
+  font-size: .1rem;
+  color: var(--orange);
+}
+
+.grid-container .item2 .box {
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.grid-container .item2 .box:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}*/
+
 .item3 {
     grid-column: 2 / 5;
     grid-row: 1 / 2;
-   
 }
 
 .item4 {
@@ -340,28 +360,44 @@ video {
     grid-row: 4 / 5;
 }
 
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+.grid-container .card {
+  margin-bottom: 5%;
+}
+
+.grid-container .card h3 {
+ font-size: 1rem;
+ align-items: center;
+ padding-top: 3%;
+}
 
 
-/* .grid-container .grid-reviews .box {
+.grid-container .card .pic {
+  width: 90%;
+  max-height: 120px;
+  object-fit: cover;
+  margin: auto;
+  overflow: hidden;
+}
+
+.grid-container .card .btn{
+  margin: 2% auto 2% 38%;
+
+  font-size: .8rem;
+  padding: 0;
+}
+
+.grid-container .card {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
 
-.grid-container .grid-reviews .box:hover{
+.grid-container .card:hover{
   box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
-}*/
-
-
-
-
-    /*
-
-.reviewsandgallery .grid-container .grid-gallery .card {
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
-
-.reviewsandgallery .grid-container .grid-gallery .card:hover{
-  box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
-} */
 
 
 
