--- a/css/resestilos.css
+++ b/css/resestilos.css
@@ -1,7 +1,174 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+/* GENERAL */
+:root{
+ --orange: #ffa500;
+}
+
+* {
+ font-family: 'Nunito', sans-serif;
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+ outline: none;
+ border: none;
+ text-decoration: none;
+ transition: all .2s linear;
+}
+
+html {
+
+ /* overflow-x: hidden; */
+ scroll-padding-top: 6rem;
+ scroll-behavior: smooth;
+}
+
+.btn {
+ display: inline-block;
+ margin-top: 1rem;
+ background: var(--orange);
+ color: #fff;
+ padding: .5rem;
+ border: .2rem solid var(--orange);
+ cursor: pointer;
+ font-size: 1rem;
+}
+
+.btn:hover {
+  border: 2px solid var(--orange);
+  background: rgba(255, 165, 0, .2);
+  color: var(--orange);
+ 
+}
+
+/* TITULOS */
+.heading {
+  text-align: center;
+  padding: 2%;
+  margin-top: 1rem;
+}
+
+.heading span {
+    font-size: 2.5rem;
+    background: rgba(255, 165, 0, .2);
+    color: var(--orange);
+    border-radius: .5rem;
+    padding: .2rem 1rem;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    grid-column-gap: 2%;
+    grid-row-gap: 2%;
+    overflow: hidden;
+    column-gap:2%;
+}
+
+.grid-container .box {
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    padding: 10%;
+    border: 1px solid #bfc9ca;
+    border-radius: 1rem;
+}
+
+.grid-container .box img{
+  border-radius: 50%;
+}
+
+.grid-container .box h3{
+  font-size: 1.2rem;
+  margin-top: 10%;
+}
+
+.grid-container .stars i {
+  font-size: 1rem;
+  color: var(--orange);
+}
+
+.grid-container .box {
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.grid-container .box:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}
+
+.item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.item2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.item3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+
+.item4 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.item5 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.item6 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.item7 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.item8 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.item9 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.item10 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+}
+
+.item11 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.item12 {
+    grid-column:3 / 4;
+    grid-row: 4 / 5;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+}
+
+/* 
 .grilla {
     display: grid;
     place-items: center;
-    grid-template-columns: 3fr 2fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
@@ -11,57 +178,57 @@
 }
 
 .item2 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 5;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 .item3 {
-    grid-column: 2 / 5;
+    grid-column: 3 / 4;
     grid-row: 1 / 2;
    
 }
 
 .item4 {
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
 }
 
 .item5 {
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
 
 .item6 {
-    grid-column: 4 / 5;
+    grid-column: 3 / 4;
     grid-row: 2 / 3;
 }
 
 .item7 {
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 3 / 4;
 }
 
 .item8 {
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
 
 .item9 {
-    grid-column: 4 / 5;
+    grid-column: 3 / 4;
     grid-row: 3 / 4;
 }
 
 .item10 {
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     grid-row: 4 / 5;
 }
 
 .item11 {
-    grid-column: 3 / 4;
+    grid-column: 2 / 3;
     grid-row: 4 / 5;
 }
 
 .item12 {
-    grid-column: 4 / 5;
+    grid-column: 3 / 4;
     grid-row: 4 / 5;
-}
+} */
