--- a/css/estilos_reseñas.css
+++ b/css/estilos_reseñas.css
@@ -17,8 +17,6 @@
 }
 
 html {
-
- /* overflow-x: hidden; */
  scroll-padding-top: 6rem;
  scroll-behavior: smooth;
 }
@@ -56,10 +54,11 @@ html {
     padding: .2rem 1rem;
 }
 
+/* GRILLA DE RESEÑAS */
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
     grid-column-gap: 2%;
@@ -163,72 +162,3 @@ html {
   display: flex;
   justify-content: center;
 }
-
-/* 
-.grilla {
-    display: grid;
-    place-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-}
-
-.item1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-}
-
-.item2 {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-}
-
-.item3 {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-   
-}
-
-.item4 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-}
-
-.item5 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-}
-
-.item6 {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-}
-
-.item7 {
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
-}
-
-.item8 {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-}
-
-.item9 {
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
-}
-
-.item10 {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5;
-}
-
-.item11 {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
-}
-
-.item12 {
-    grid-column: 3 / 4;
-    grid-row: 4 / 5;
-} */
