--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,6 @@
 }
 
 html {
-
- /* overflow-x: hidden; */
  scroll-padding-top: 6rem;
  scroll-behavior: smooth;
 }
@@ -61,7 +59,7 @@ section {
 }
 
 .heading span {
- font-size: 2.5rem;
+ font-size: 2.0rem;
  background: rgba(255, 165, 0, .2);
  color: var(--orange);
  border-radius: .5rem;
@@ -104,6 +102,10 @@ video {
   margin-bottom: 0;
 }
 
+.destinations {
+  max-width: 90%;
+}
+
 .presentation-video h1{
   color: #333;
   font-size: 2.8rem;
@@ -125,6 +127,11 @@ video {
 }
 
 /* SECCION DESTINOS */
+.destinations {
+  max-width: 80%;
+}
+
+
 .destinations .box-container{
   display: flex;
   flex-wrap: wrap;
@@ -195,6 +202,10 @@ video {
 }
 
 /* SECCION PAQUETES */
+.packages {
+  max-width: 70%;
+}
+
 .packages .box-container{
   display: flex;
   flex-wrap: wrap;
@@ -238,6 +249,10 @@ video {
 }
 
 /* SECCION SERVICIOS */
+.services {
+  max-width: 80%;
+}
+
 .services .box-container{
   display: flex;
   flex-wrap: wrap;
@@ -272,169 +287,203 @@ video {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 
-/* SECCION RESEÑAS  Y GALERIA */
+/* SECCION RESEÑAS*/
 
-.reviewsandgallery{
-  margin-bottom: 5%;
-}
-
-.grid-container {
+.reviews .grid-container {
     display: grid;
-    grid-template-columns: 3fr 2fr 2fr 2fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;;
+    grid-template-rows: 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
-    gap: 2%;
+    grid-column-gap: 2%;
+    grid-row-gap: 2%;
     overflow: hidden;
+    column-gap:2%;
+    height: 200rem;
 }
 
-.left-title {
-    font-size: 2.5rem;
-    background: rgba(255, 165, 0, .2);
-    color: var(--orange);
-    border-radius: .5rem;
-    letter-spacing: 15px;
+.reviews .grid-container .box {
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    padding: 10%;
+    border: 1px solid #bfc9ca;
+    border-radius: 1rem;
+    height: 60rem;
 }
 
-.right-title {
-    font-size: 2.5rem;
-    background: rgba(255, 165, 0, .2);
-    color: var(--orange);
-    border-radius: .5rem;
-    letter-spacing: 25px;
-}
-
-.item1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-}
-
-.item2 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 5;
-}
-
-.reviewsandgallery .grid-container .item2 .box {
-  display: grid;
-  grid-template-columns: 1fr;
-  place-items: center;
-  padding: 10%;
-  border: 1px solid #bfc9ca;
-  border-radius: 1rem;
-}
-
-.reviewsandgallery .grid-container .item2 .box img{
+.reviews .grid-container .box img{
   border-radius: 50%;
-
 }
 
-
-.reviewsandgallery .grid-container .item2.box h1 {
-  font-size: .1rem;
+.reviews .grid-container .box h3{
+  font-size: 1.2rem;
   margin-top: 10%;
-
 }
 
-.reviewsandgallery .grid-container .item2 .stars i {
+.reviews .grid-container .stars i {
   font-size: 1rem;
   color: var(--orange);
 }
 
-.reviewsandgallery .grid-container .item2 .box {
+.reviews .grid-container .box {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
 
-.reviewsandgallery .grid-container .item2 .box:hover{
+.reviews .grid-container .box:hover{
   box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
 }
 
-.item3 {
-    grid-column: 2 / 5;
+.reviews .item1 {
+    grid-column: 1 / 2;
     grid-row: 1 / 2;
 }
 
-.item4 {
+reviews .item2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+reviews .item3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}.reviews 
+
+reviews .item4 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+reviews .item5 {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
 
-.item5 {
+reviews .item6 {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
 }
 
-.item6 {
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
+.reviews .item7 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
 }
 
-.item7 {
+.reviews .item8 {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
 
-.item8 {
+.reviews .item9 {
     grid-column: 3 / 4;
     grid-row: 3 / 4;
 }
 
-.item9 {
-    grid-column: 4 / 5;
-    grid-row: 3 / 4;
-}
-
-.item10 {
-    grid-column: 2 / 3;
+.reviews .item10 {
+    grid-column: 1 / 2;
     grid-row: 4 / 5;
 }
 
-.item11 {
-    grid-column: 3 / 4;
+.reviews .item11 {
+    grid-column: 2 / 3;
     grid-row: 4 / 5;
 }
 
 .item12 {
-    grid-column: 4 / 5;
+    grid-column:3 / 4;
     grid-row: 4 / 5;
 }
 
-.title {
+.reviews .title {
   display: flex;
   justify-content: center;
 }
 
-.grid-container .card {
-  margin-bottom: 5%;
+/*GALERIA */
+
+.gallery .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 2%;
+    overflow: hidden;
+    height: 1000px;
 }
 
-.grid-container .card h3 {
+.gallery .item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.gallery .item2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.gallery .item3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+
+.gallery .item4 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.gallery .item5 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.gallery .item6 {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.gallery .item7 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.gallery .item8 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.gallery .item9 {
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.gallery .grid-container .card h3 {
  font-size: 1rem;
- align-items: center;
+ text-align: center;
  padding-top: 3%;
 }
 
-.grid-container .card .pic {
+.gallery .grid-container .card .pic {
   width: 90%;
-  max-height: 120px;
+  max-height: 180px;
   object-fit: cover;
   margin: auto;
   overflow: hidden;
 }
 
-.grid-container .card .btn{
-  margin: 2% auto 2% 38%;
-
+.gallery .grid-container .card .btn{
+  margin: 1% 0 1% 42%;
   font-size: .8rem;
-  padding: 0;
 }
 
-.grid-container .card {
+.gallery .grid-container .card {
   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
 }
 
-.grid-container .card:hover{
+.gallery .grid-container .card:hover{
   box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
 }
+
 
 
 
@@ -659,100 +708,380 @@ btn btn-outline-primary btn-square {
 /*  SECTOR RESPONSIVE */
   /* SECCION RESEÑAS  Y GALERIA */
 
-@media (max-width: 767px) {
+@media (max-width:991px) {
+  .reviews .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    grid-column-gap: 2%;
+    grid-row-gap: 2%;
+    overflow: hidden;
+    column-gap:2%;
+    height: 330rem;
+   
+}
+.reviews 
+.reviews .grid-container .box img{
+  border-radius: 50%;
+}
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  justify-items: center;
-  align-items: center;
+.reviews .grid-container .box h3{
+  font-size: 1.2rem;
+  margin-top: 10%;
+}
+
+.reviews .grid-container .stars i {
+  font-size: 1rem;
+  color: var(--orange);
+}
+
+.reviews .grid-container .box {
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.reviews .grid-container .box:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}
+
+.reviews .item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.reviews .reviews item2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.reviews .item3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.reviews .item4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.reviews .item5 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.reviews .item6 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.reviews .item7 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+}
+
+.reviews .item8 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.reviews .item9 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+}
+
+.reviews .item10 {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+}
+
+
+.reviews .title {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.gallery .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 2%;
+    overflow: hidden;
+    min-height: 1500px;
+}
+
+.gallery .item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.gallery .item2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.gallery .item3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.gallery .item4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.gallery .item5 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.gallery .item6 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+.gallery .item7 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+}
+
+.gallery .item8 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.gallery .item9 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+}
+
+
+.gallery .grid-container .card h3 {
+ font-size: 1rem;
+ text-align: center;
+ padding-top: 3%;
+}
+
+.gallery .grid-container .card .pic {
+  width: 90%;
+  max-height: 180px;
+  object-fit: cover;
+  margin: auto;
   overflow: hidden;
 }
 
-.item1 {
-  grid-column: 1 / 4;
+.gallery .grid-container .card .btn{
+  margin: 1% 0 1% 42%;
+  font-size: .8rem;
+}
+
+.gallery .grid-container .card {
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.gallery .grid-container .card:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}
+
+
+
+
+}
+
+
+@media (max-width:767px) {
+
+  .services .box-container{
+    width: 70%;
+    margin-left: 15%;
+  }
+
+  .reviews .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+    height: 660rem;
+  
+}
+
+ .reviews .grid-container .box {
+    max-width: 90%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+    border: 1px solid #bfc9ca;
+    border-radius: 1rem;
+} 
+
+.reviews .grid-container .box img{
+  border-radius: 50%;
+}
+
+.reviews .grid-container .box h3{
+  font-size: 1.2rem;
+
+}
+
+.reviews .grid-container .stars i {
+  font-size: 1rem;
+  color: var(--orange);
+}
+
+.reviews .grid-container .box {
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.reviews .grid-container .box:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}
+
+.reviews .item1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.reviews .item2 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.reviews .item3 {
+     grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+
+.reviews .item4 {
+     grid-column: 1 / 2;
+    grid-row: 4 / 5;
+}
+
+.reviews .item5 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+}
+
+.reviews .item6 {
+    grid-column: 1 / 2;
+    grid-row: 6 / 7;
+}
+
+.reviews .item7 {
+    grid-column: 1 / 2;
+    grid-row: 7 / 8;
+}
+
+.reviews .item8 {
+   grid-column: 1 / 2;
+    grid-row: 8 / 9;
+}
+
+.reviews .item9 {
+    grid-column: 1 / 2;
+    grid-row: 9 / 10;
+}
+
+.reviews .title {
+  display: flex;
+  justify-content: center;
+}
+  
+.gallery .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 2%;
+    overflow: hidden;
+    width: 80%;
+    margin-left: 10%;
+    min-height: 3000px;
+}
+
+.gallery .item1 {
+  grid-column: 1 / 2;
   grid-row: 1 / 2;
-  place-content: center;
-  text-align: center;
 }
 
-.item2 {
-  grid-column: 1 / 4;
-  grid-row: 2 / 5;
-  place-content: center;
-  text-align: center;
+.gallery .item2 {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
 
-.item3 {
-  margin-top: 3rem;  
-  grid-column: 1 / 4;
+.gallery .item3 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+.gallery .item4 {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+}
+
+.gallery .item5 {
+  grid-column: 1 / 2;
   grid-row: 5 / 6;
-  place-content: center;
-  text-align: center;
 }
 
-.item4 {
+.gallery .item6 {
   grid-column: 1 / 2;
   grid-row: 6 / 7;
-  place-content: center;
-  text-align: center;
 }
 
-.item5 {
-  grid-column: 2 / 3;
-  grid-row: 6 / 7;
-  place-content: center;
-  text-align: center;
+.gallery .item7 {
+   grid-column: 1 / 2;
+   grid-row: 7 / 8;
 }
 
-.item6 {
-  grid-column: 3 / 4;
-  grid-row: 6 / 7;
-  place-content: center;
-  text-align: center;
-}
-  .item7 {
-  place-content: center;
-  text-align: center;
-  grid-column: 1 / 2;
-  grid-row: 7 / 8;
-}
-
-.item8 {
-  grid-column: 2 / 3;
-  grid-row: 7 / 8;
-  place-content: center;
-  text-align: center;
-}
-
-.item9 {   
-  grid-column: 3 / 4;
-  grid-row: 7 / 8;
-  place-content: center;
-  text-align: center;
-}
-
-.item10 { 
+.gallery .item8 {
   grid-column: 1 / 2;
   grid-row: 8 / 9;
-  place-content: center;
-  text-align: center;
 }
 
-.item11 {
-  grid-column: 2 / 3;
-  grid-row: 8 / 9;
-  place-content: center;
-  text-align: center;
+.gallery .item9 {
+  grid-column: 1 / 2;
+  grid-row: 9 / 10;
 }
 
-.item12 {
-  grid-column: 3 / 4;
-  grid-row: 8 / 9;
-  place-content: center;
-  text-align: center;
+
+.gallery .grid-container .card h3 {
+ font-size: 1rem;
+ text-align: center;
+ padding-top: 3%;
 }
-      
+
+.gallery .grid-container .card .pic {
+  width: 90%;
+  max-height: 180px;
+  object-fit: cover;
+  margin: auto;
+  overflow: hidden;
+}
+
+.gallery .grid-container .card .btn{
+  margin: 1% 0 1% 42%;
+  font-size: .8rem;
+}
+
+.gallery .grid-container .card {
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+}
+
+.gallery .grid-container .card:hover{
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.3); 
+}
+
+
+
+
 }
 
