--- a/css/styles.css
+++ b/css/styles.css
@@ -122,13 +122,13 @@ video {
 }
 
 .audio {
-  margin-left: 35%;
+  margin-left: 45%;
   margin-right: auto;
 }
 
 /* SECCION DESTINOS */
 .destinations {
-  max-width: 80%;
+  max-width: 75%;
 }
 
 
@@ -250,7 +250,7 @@ video {
 
 /* SECCION SERVICIOS */
 .services {
-  max-width: 80%;
+  max-width: 75%;
 }
 
 .services .box-container{
@@ -288,6 +288,10 @@ video {
 }
 
 /* SECCION RESEÑAS*/
+
+.reviews {
+  width: 75%;
+}
 
 .reviews .grid-container {
     display: grid;
@@ -339,27 +343,27 @@ video {
     grid-row: 1 / 2;
 }
 
-reviews .item2 {
+.reviews .item2 {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
 }
 
-reviews .item3 {
+.reviews .item3 {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
 }.reviews 
 
-reviews .item4 {
+.reviews .item4 {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
 }
 
-reviews .item5 {
+.reviews .item5 {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
 
-reviews .item6 {
+.reviews .item6 {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
 }
@@ -400,6 +404,9 @@ reviews .item6 {
 }
 
 /*GALERIA */
+.gallery {
+  width: 75%;
+}
 
 .gallery .grid-container {
     display: grid;
@@ -488,6 +495,9 @@ reviews .item6 {
 
 
 /* FOOTER - BARRA NAVEGACION INFERIOR */
+footer {
+  max-width: 100%;
+}
 
 .bg-dark {
   background-color: #666 !important;
